@@ -1479,19 +1479,7 @@ void Game_window::show_items
 	if (obj)
 		{
 					// Show name.
-		char *item_name = obj->get_name();
-		if (item_name)
-			{
-			int quant = obj->get_quantity();
-			if (quant <= 1)	// Just one?
-				add_text(item_name, x, y);
-			else		// Show quantity.
-				{
-				char buf[50];
-				sprintf(buf, "%d %s", quant, item_name);
-				add_text(buf, x, y);
-				}
-			}
+		add_text(obj->get_name().c_str(), x, y);
 //++++++++Testing
 #if 1
 		int shnum = obj->get_shapenum(), frnum = obj->get_framenum();
